--- a/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
+++ b/src/modules/70-pipeline/components/RunPipelineModal/RunPipelineModal.module.scss
@@ -82,7 +82,7 @@
 }
 
 .preFlightCheckModal {
-  width: 700px;
+  width: 900px;
   padding: var(--spacing-large);
 }
 
